--- a/dev/templates/personal.html
+++ b/dev/templates/personal.html
@@ -41,19 +41,19 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-7">
                                         <div class="wrap-img">
                                             <img src="images/img-persone.png" alt="img-persone">
                                         </div>
                                         <div class="wrap-info">
-                                            <div class="bal">351 балл</div>
+                                            <div class="bal">351 балл опыта</div>
                                             <p class="small">Средний балл  65 из 100</p>
                                             <div class="sertificat">
                                                 <img src="images/medal.svg" alt=""> Получен <b>1</b> сертификат!
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-5 profile-arrow">
                                         <p>Профессия</p>
                                         <div class="title">Junior Data Analyst</div>
                                         <span class="el-progress-wrap all-progress">
@@ -169,7 +169,7 @@
                                         <div class="right-competence">
                                             <div class="title">
                                                 8 из 15 <span>компетенций</span>
-                                                <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                                <button class="js-toggle-close"><i class="icon-angle-up"></i></button>
                                             </div>
                                             <div id="scroll-wrap1" class="scroll-wrap">
                                                 <ul class="list-competence">
@@ -213,7 +213,7 @@
                                                     <span class="name">Программирование</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -227,7 +227,7 @@
                                                     <span class="name">Maschine Learning</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -242,7 +242,7 @@
                                                     <span class="name">Анализ Big Data</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -256,7 +256,7 @@
                                                     <span class="name">Микробиом пресных водоемов</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -277,7 +277,7 @@
                                                     <span class="name">Анализ Big Data</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -291,7 +291,7 @@
                                                     <span class="name">Микробиом пресных водоемов</span>
                                                     <ul class="skill-nav">
                                                         <li><span>идет обучение</span></li>
-                                                        <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                        <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                         <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                     </ul>
                                                     <span class="el-progress-wrap">
@@ -308,7 +308,7 @@
                                         <div class="right-competence">
                                             <div class="title">
                                                 8 из 15 <span>компетенций</span>
-                                                <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                                <button class="js-toggle-close"><i class="icon-angle-up"></i></button>
                                             </div>
                                             <div id="scroll-wrap" class="scroll-wrap">
                                                 <ul class="list-competence">
