--- a/dev/templates/profession.html
+++ b/dev/templates/profession.html
@@ -156,7 +156,7 @@
                                                 <span class="name">Программирование</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -170,7 +170,7 @@
                                                 <span class="name">Maschine Learning</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -185,7 +185,7 @@
                                                 <span class="name">Анализ Big Data</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -199,7 +199,7 @@
                                                 <span class="name">Микробиом пресных водоемов</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -220,7 +220,7 @@
                                                 <span class="name">Анализ Big Data</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -234,7 +234,7 @@
                                                 <span class="name">Микробиом пресных водоемов</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
-                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon-white.svg" alt=""></a></li>
                                                     <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
                                                 </ul>
                                                 <span class="el-progress-wrap">
@@ -251,7 +251,7 @@
                                     <div class="right-competence">
                                         <div class="title">
                                             8 из 15 <span>компетенций</span>
-                                            <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                            <button class="js-toggle-close"><i class="icon-angle-up"></i></button>
                                         </div>
                                         <div id="scroll-wrap" class="scroll-wrap">
                                             <ul class="list-competence">
