--- a/dev/sass/pages/personal.sass
+++ b/dev/sass/pages/personal.sass
@@ -81,19 +81,19 @@
       margin: 0 -30px
       li
         @extend %clear-fix
-        padding: 20px 30px
+        padding: 15px 30px
         transition: all .12s ease
         &:hover
-          padding: 24px 30px
-          background-color: #e2e3e9
+          background-color: #4a72f5
           cursor: pointer
           .skill-nav
             opacity: 1
             visibility: visible
-            margin: -24px -30px -24px 20px
-            height: 66px
-            li
-              padding: 24px
+          .name
+            color: white
+          .el-progress-wrap .prosent
+            color: white
+
 
       .name
         display: block
@@ -111,24 +111,24 @@
       display: inline-block
       float: right
       overflow: hidden
-      margin: -20px -30px -20px 20px
+      margin: -15px -30px -15px 20px
       width: 280px
-      height: 58px
+      height: 48px
       transition: all .12s ease
       li
         float: left
-        padding: 20px 24px
+        padding: 15px 23px
         border-left: 1px solid white
         transition: all .12s ease
         &:first-child
           border-left: none
       a i:before
         margin: 0
-        color: #9b9b9b
+        color: white
         text-decoration: none
         font-size: 22px
       span
-        color: black
+        color: white
         font: 400 13px $open
 
     .right-competence
@@ -139,25 +139,34 @@
       right: -15px
       bottom: 31px
       width: 290px
-      background-color: #e2e3e9
+      background-color: white
       .title
         @extend %clear-fix
         margin-bottom: 10px
         padding-left: 30px
         color: black
-        font: 400 13px/67px $open
+        font: 400 13px/40px $open
         span
           color: #9b9b9b
 
         button
           float: right
           width: 67px
-          height: 67px
-          background-color: #c8cccf
+          height: 40px
+          background-color: #4a72f5
           text-align: center
-          line-height: 67px
+          line-height: 40px
+
+          i:before
+            margin: 0
+            color: white
+            text-decoration: none
+            font-size: 22px
+            vertical-align: sub
+
           img
             vertical-align: middle
+
       .list-competence
         padding: 0px 10px 0 20px
         li
@@ -183,8 +192,7 @@
             opacity: 0
 
           &:hover
-            background-color: #c8cccf
-            color: $color-blue
+            background-color: #eff4f7
             cursor: pointer
             &:after
               visibility: visible
@@ -193,7 +201,7 @@
       .scroll-wrap
         box-sizing: border-box
         padding-right: 10px
-        height: 470px
+        height: 410px
     // more-link
     //-----------------------------------------------------------------------------------
     .more-link
@@ -361,9 +369,9 @@
 
       .bal
         color: black
-        font: 400 46px/50px $open
+        font: 400 36px/50px $open
         @media (max-width: $screen-sm-max)
-          font-size: 30px
+          font-size: 20px
           line-height: 34px
 
 
@@ -402,6 +410,7 @@
     .wrap-info
       margin: 10px 0 30px 165px
       display: block
+
       @media (max-width: $screen-sm-max)
         margin-left: 120px
 
@@ -411,6 +420,17 @@
       margin-top: 12px
       opacity: .5
 
+    .profile-arrow
+      position: relative
+      padding-left: 80px
+      &:before
+        position: absolute
+        left: 0
+        top: 0
+        content: ''
+        background: url(../images/profile-arrow.svg) no-repeat center
+        width: 40px
+        height: 70px
 
     // section-2
     //-----------------------------------------------------------------------------------
@@ -423,7 +443,7 @@
         top: 50px
         bottom: 40px
         .scroll-wrap
-          height: 280px
+          height: 260px
       .item
         margin-bottom: 10px
         &:after
@@ -433,42 +453,37 @@
         .name
           max-width: 170px
         li
-          padding: 16px 30px
+          padding: 15px 30px
           &:hover
-            padding: 20px 30px
             .skill-nav
               opacity: 1
               visibility: visible
-              margin: -18px -30px -20px 20px
-              height: 58px
-              li
-                padding: 16px 24px
 
       .skill-nav
         @extend %clear-fix
         display: inline-block
         float: right
         overflow: hidden
-        margin: -20px -30px -20px 20px
+        margin: -15px -30px -15px 20px
         width: 150px
-        height: 50px
+        height: 48px
         transition: all .12s ease
         opacity: 0
         visibility: hidden
         li
           float: left
-          padding: 16px 24px
+          padding: 13px 24px
           border-left: 1px solid white
           transition: all .12s ease
           &:first-child
             border-left: none
         a
           text-decoration: none
-          color: black
+          color: white
           font: 400 13px $open
           i:before
             margin: 0
-            color: #9b9b9b
+            color: white
             text-decoration: none
             font-size: 22px
             vertical-align: sub
